--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/error/error.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/error/error.vm
@@ -7,8 +7,8 @@
             <div class="panel">
                 <div class="form-done">
                     <div class="title">#if(${message_content})${message_content}#else系统繁忙，您的申请提交失败！#end</div>
-                    <a class="btn" #if(${message_url}) href="${ufbDomain}/${message_url}" #else href="${ufbDomain}/family/uft/uft_index.htm" #end>
-                    	#if(${back_module})${back_module}#else我的账户#end
+                    <a class="btn" #if(${message_url}) href="${ufbDomain}/${message_url}" #else href="${ufbDomain}/family/index.htm" #end>
+                    	#if(${back_module})${back_module}#else幼富通首页#end
                     </a>
                     <div class="tips">
                     	<p>温馨提示：</p>
