--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/password_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/password_index.vm
@@ -11,7 +11,14 @@ $(function(){
             _this.siblings(".tips-normal").hide();
         }
     });
-
+	// 用户输入时，取消错误提示
+		$("form input").on('focus', function(){
+			if($(this).parent().hasClass('error')){
+				$(this).parent().removeClass('error');
+			//	$(this).siblings('.tips-check').hide();
+			}
+		});
+		
 	// 检验图形验证码
 	function verifycode_check(verifycode){
 		if(verifycode==''){
@@ -44,7 +51,7 @@ $(function(){
 		return result;
 	}
 	
-	//发送短信验证码
+	// 发送短信验证码
 	$("#btn-getMsgCode").on("click",function(){
 		var verifycode=$("#verifycode").val();
 		var mobileno=$("#mobileno").val();
@@ -95,7 +102,7 @@ $(function(){
 			}
 		}
 
-	//校验手机验证码是否正确
+	// 校验手机验证码是否正确
 	function check_msgcode(mobileno,msgcode){
 		var result = false;
 		$.ajax({
@@ -107,8 +114,6 @@ $(function(){
 				var json=$.parseJSON(data);
 				if(json.errCode=="0000"){
 					result = true;
-				}else{
-					result = false;
 				}
 		    },
 			error:function(XMLHttpRequest,textStatus,errorThrown){
@@ -118,7 +123,7 @@ $(function(){
 		return result;
 	}
 
-	//校验登录密码是否与交易密码相同
+	// 校验登录密码是否与交易密码相同
 	var check_isTradePwdSame=function(password,type){
 		var result=false;
 		$.ajax({
@@ -140,32 +145,29 @@ $(function(){
 		return result;
 	}
 	
-	//检验登录密码修改是否成功
+	// 检验登录密码修改是否成功
 	var check_updatepwd = function(){
 		 var result = false;
-		 $('#form-findstep1').ajaxSubmit({
-			async:false,
-			resetForm:false,
-			clearForm:false,
-			success: function(data){
-				var json = $.parseJSON(data);
-				if(json.errCode=='0000'){
-					result = true;
-				}else if(json.errCode=='0001'){
-					$("#errMsg_password").addClass("error");
-					$("#passwordTips").html(json.errMsg);
-					result = false;
-				}
-			},
-			error: function(XMLHttpRequest, textStatus, errorThrown) {
-				$.alert({title:'系统出现异常！'});
-			}
-		 });
+			$.ajax({
+				type:"POST",
+				url:"${ufbDomain}/family/setting/update_loginPwd.htm",
+				data:"password0="+$("#login_password0").val()+"&password1="+$("#login_password1").val(),
+				async:false,
+				success:function(data){
+					var json=$.parseJSON(data);
+					if(json.errCode=="0000"){
+						result=true;
+					}
+			    },
+				error:function(XMLHttpRequest,textStatus,errorThrown){
+			    	$.alert({title:"系统出现异常！"});
+			    }
+				
+			})
 		 return result;
 	}
 	
 	function form_check(){
-		//验证码
 		var verifycode=$("#verifycode").val();
 		if(verifycode==''){
 			$("#errMsg_code").addClass("error");
@@ -174,7 +176,8 @@ $(function(){
 		}else{
 			$("#errMsg_code").removeClass("error");
 		}
-		//手机验证码
+		
+		// 手机验证码
 		var msgcode=$("#msgcode").val();
 		var mobileno=$("#mobileno").val();
 		if(msgcode==''){
@@ -203,28 +206,23 @@ $(function(){
 		//校验确认密码        
 		var password1=$("#login_password1").val();
 		var password2=$("#login_password2").val();
-		var text=check_pwd1(password1);
-		if(text!=""){
+		if(check_pwd1(password1)!=""){
 			$("#errMsg_confirmPwd").addClass("error");
-			$("#confirmPwdTips").html(text);
+			$("#confirmPwdTips").html(check_pwd1(password1));
 			return false;
 		}else{
 			$("#errMsg_confirmPwd").removeClass("error");
 		}
-		var text2=check_pwd2(password1,password2);
-		if(text2!=''){
+		if(check_pwd2(password1,password2)!=''){
 			$("#errMsg_confirmPwd2").addClass("error");
-			$("#confirmPwdTips2").html(text2);
+			$("#confirmPwdTips2").html(check_pwd2(password1,password2));
 			return false;
 		}else{
 			$("#errMsg_confirmPwd2").removeClass("error");
 		}
-		if(check_isTradePwdSame(password1,1)){
-			$("#errMsg_confirmPwd2").addClass("error");
-			$("#confirmPwdTips2").html("登录密码与交易密码相同！");
-			return false;
-		}
 		if(!check_updatepwd()){
+			$("#errMsg_password").addClass("error");
+			$("#passwordTips").html("原登录密码不正确！");
 			return false;
 			
 		}else{
@@ -239,20 +237,22 @@ $(function(){
 	
 	var check_updateTradepwd = function(){
 		 var result = false;
-		 $('#form-settingTradePwd').ajaxSubmit({
-			async:false,
-			resetForm:false,
-			clearForm:false,
-			success: function(data){
-				var json = $.parseJSON(data);
-				if(json.errCode=='0000'){
-					result = true;
-				}
-			},
-			error: function(XMLHttpRequest, textStatus, errorThrown) {
-				$.alert({title:'系统出现异常！'});
-			}
-		 });
+			$.ajax({
+				type:"POST",
+				url:"${ufbDomain}/family/setting/update_tradePwd.htm",
+				data:"password0="+$("#trade_password0").val()+"&password1="+$("#trade_password1").val()+"&password2="+$("#trade_password2").val(),
+				async:false,
+				success:function(data){
+					var json=$.parseJSON(data);
+					if(json.errCode=="0000"){
+						result=true;
+					}
+			    },
+				error:function(XMLHttpRequest,textStatus,errorThrown){
+			    	$.alert({title:"系统出现异常！"});
+			    }
+				
+			})
 		 return result;
 	   }
 	
@@ -263,24 +263,17 @@ $(function(){
 			$("#errMsg_password1").addClass("error");
 			$("#password1Tips").html("新交易密码不能为空！");
 			return false;
-		}
-		var text=check_pwd1(password1);
-		if(text!=''){
+		}else if(check_tradePwd1(password1)!=''){
 			$("#errMsg_password1").addClass("error");
-			$("#password1Tips").html(text);
+			$("#password1Tips").html(check_tradePwd1(password1));
 			return false;
 		}else{
 			$("#errMsg_password1").removeClass("error");
 		}
 		var password2=$("#trade_password2").val();
-		var text2=check_pwd2(password1,password2);
-		if(text2!=''){
+		if(check_pwd2(password1,password2)!=''){
 			$("#errMsg_password2").addClass("error");
-			$("#password2Tips").html(text2);
-			return false;
-		}else if(check_isTradePwdSame(password1,2)){
-			$("#errMsg_password2").addClass("error");
-			$("#password2Tips").html("交易密码与登录密码相同！");
+			$("#password2Tips").html(check_pwd2(password1,password2));
 			return false;
 		}else{
 			$("#errMsg_password2").removeClass("error");
@@ -288,7 +281,7 @@ $(function(){
 		return true;
 	}
 	
-	//修改交易密码按钮
+	// 修改交易密码按钮
 	$("#btn-settingTradePwd").on("click",function(){
 		if($("#trade_password0").val()==''){
 			$("#errMsg_password0").addClass("error");
@@ -297,7 +290,6 @@ $(function(){
 		}else{
 			$("#errMsg_password0").removeClass("error");
 		}
-		
 		if(check_trade()){
 			//提交表单  
 			if(check_updateTradepwd()){
@@ -320,48 +312,43 @@ $(function(){
 				$("#passwordBack1Tips").html("新交易密码不能为空！");
 				return false;
 			}
-			var text=check_pwd1(password1);
-			if(text!=''){
+			if(check_tradePwd1(password1)!=''){
 				$("#errMsg_password_back1").addClass("error");
-				$("#passwordBack1Tips").html(text);
+				$("#passwordBack1Tips").html(check_tradePwd1(password1));
 				return false;
 			}else{
 				$("#errMsg_password_back1").removeClass("error");
 			}
 			var password2=$("#trade_password_back2").val();
-			var text2=check_pwd2(password1,password2);
-			if(text2!=''){
+			if(check_pwd2(password1,password2)!=''){
 				$("#errMsg_password_back2").addClass("error");
-				$("#passwordBack2Tips").html(text2);
+				$("#passwordBack2Tips").html(check_pwd2(password1,password2));
 				return false;
 			}else{
 				$("#errMsg_password_back2").removeClass("error");
 			}
-			if(check_isTradePwdSame(password1,2)){
-				$("#errMsg_password_back2").addClass("error");
-				$("#passwordBack2Tips").html("交易密码与登录密码相同！");
-				return false;
-			}
 			return true;
 		}
 	
-	//找回交易密码按钮
+	// 找回交易密码按钮
 	function tradePwdBack(){
 		var result=false;
-		 $('#form-settingTradePwd-back').ajaxSubmit({
-				async:false,
-				resetForm:false,
-				clearForm:false,
-				success: function(data){
-			     var json = $.parseJSON(data);
-					if(json.errCode=='0000'){
-						result = true;
-					}
-				},
-				error: function(XMLHttpRequest, textStatus, errorThrown) {
-					$.alert({title:'系统出现异常！'});
+		$.ajax({
+			type:"POST",
+			url:"${ufbDomain}/family/setting/tradePwd_back.htm",
+			data:"password1="+$("#trade_password_back1").val()+"&password2="+$("#trade_password_back2").val(),
+			async:false,
+			success:function(data){
+				var json=$.parseJSON(data);
+				if(json.errCode=="0000"){
+					result=true;
 				}
-			 });
+		    },
+			error:function(XMLHttpRequest,textStatus,errorThrown){
+		    	$.alert({title:"系统出现异常！"});
+		    }
+			
+		})
 		 return result;
 	}
 	$("#btn-settingTradePwd-back").on("click",function(){
@@ -375,6 +362,34 @@ $(function(){
 		}
 	});
 	#end
+	$("#tab1").on("click",function(){
+		$("#login_password0").val("");
+		$("#login_password1").val("");
+		$("#login_password2").val("");
+		$(".panel1 li").find(".tips-normal").attr("style","display:block");
+		$(".step02").attr("style","display:block;");
+		$(".step03").addClass("slide-out");
+		
+	})
+	$("#tab2").on("click",function(){
+		$("#trade_password0").val("");
+		$("#trade_password1").val("");
+		$("#trade_password2").val("");
+		$(".panel2 li").find(".tips-normal").attr("style","display:block");
+		$(".tradeStep1").attr("style","display:block;");
+		$(".tradeStep2").addClass("slide-out");
+	})
+	$("#tab3").on("click",function(){
+		$("#trade_password_back1").val("");
+		$("#trade_password_back2").val("");
+		$("#verifycode").val("");
+		$("#msgcode").val("");
+		$("#msgcode").siblings(".tips-normal").html("6位验证码");
+		$(".panel3 li").find(".tips-normal").attr("style","display:block");
+		$(".tradeBackStep1").attr("style","display:block;");
+		$(".tradeBackStep2").addClass("slide-out");
+		//clearTimeout(countdown);
+	})
 });
 
 </script>
@@ -417,20 +432,20 @@ $(function(){
 	                        <span class="form-title">新登录密码</span>
 	                        <input id="login_password1" name="login_password1" class="ipt-password input-text" type="password">
 	                        <span class="tips-normal">请输入密码</span>
-	                        <span class="tips-check"><i class="icon"></i><font id="confirmPwdTips">验证提示</font></span>
+	                        <span class="tips-check"><i class="icon"></i><font id="confirmPwdTips"></font></span>
 	                    </li>
 	                    <li id="errMsg_confirmPwd2"> 
 	                    <span class="form-title">确认新登录密码</span>
 	                    <input id="login_password2" name="login_password2" class="ipt-password input-text" type="password">
 	                    <span class="tips-normal">请再次输入密码</span>
-	                    <span class="tips-check"><i class="icon"></i><font id="confirmPwdTips2">验证提示</font></span>
+	                    <span class="tips-check"><i class="icon"></i><font id="confirmPwdTips2"></font></span>
 	                    </li>
 	                    <li>
 	                        <input id="btn-updateLoginPwd" class="input-button ok" type="button" value="提&nbsp;交">
 	                    </li>
 	                    </ul>
 	                     <div class="form-done step03 slide-out" style="margin-top:-200px;">
-	                        <div class="title">新密码设置成功</div>
+	                        <div class="title" style="padding-left: 0px">新密码设置成功</div>
 	                        <div class="tips">请牢记新密码</div>
 	                        <a class="btn" href="${ufbDomain}/family/uft/uft_index.htm">我的账户</a>
 	                    </div>
@@ -464,7 +479,7 @@ $(function(){
                                     </li>
                                 </ul>
                                 <div class="form-done tradeStep2 slide-out" style="margin-top:-200px;">
-    	                        <div class="title">新交易密码设置成功</div>
+    	                        <div class="title" style="padding-left: 0px">新交易密码设置成功</div>
     	                        <div class="tips">请牢记新密码</div>
     	                        <a class="btn" href="${ufbDomain}/family/uft/uft_index.htm">我的账户</a>
     	                        </div>
@@ -519,7 +534,7 @@ $(function(){
                                     </li>
                                 </ul>
                                 <div class="form-done tradeBackStep2 slide-out" style="margin-top:-200px;">
-    	                        <div class="title">交易密码设置成功</div>
+    	                        <div class="title" style="padding-left: 0px">交易密码设置成功</div>
     	                        <div class="tips">请牢记新密码</div>
     	                        <a class="btn" href="${ufbDomain}/family/uft/uft_index.htm">我的账户</a>
     	                       </div>
