--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/autoadd_preview.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/autoadd_preview.vm
@@ -6,6 +6,14 @@
 $(function(){
 	$('.nav a:eq(1)').addClass('active');
 	
+	// 用户输入时，取消错误提示
+		$("form input").on('focus', function(){
+			if($(this).parent().hasClass('error')){
+				$(this).parent().removeClass('error');
+				//$(this).siblings('.tips-check').hide();
+			}
+		});
+		
 	// 点击银行卡
 	$(".card").on("click", function(){
 		$("#frombankserialid").val($(this).attr("serialid"));
