--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/findpwd_confirm.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/findpwd_confirm.vm
@@ -13,8 +13,8 @@
                 <a class="tab fl" href="javascript:;">3-完成</a>
             </div>
             <div class="find-panels">
-                <form class="common-form" id="form-confirm" method="post" action="${ufbDomain}/family/setting/findpassword_success.htm">
-                <input type="hidden" id="mobileno" name="mobileno" value="$!{CustInfoVo.mobileno}">    
+                <form class="common-form" id="form-confirm" method="post" action="${ufbDomain}/family/setting/findpwd_success.htm">
+                <input type="hidden" id="mobileno" name="mobileno" value="${CustInfoVo.mobileno}" >    
                 <div class="panel">
                         <ul class="txtAuto width600">
                             <li id="errMsg_password1">
@@ -46,6 +46,14 @@
 <script >
 $(function(){
 	
+	// 用户输入时，取消错误提示
+		$("form input").on('focus', function(){
+			if($(this).parent().hasClass('error')){
+				$(this).parent().removeClass('error');
+				//$(this).siblings('.tips-check').hide();
+			}
+		});
+		
 	//校验登录密码是否与交易密码相同
 	var isTradePwdSameUnLoign=function(password,mobileno){
 		var result=false;
@@ -68,25 +76,26 @@ $(function(){
 	}
 	var check_updatepwd = function(){
 		 var result = false;
-		 $('#form-confirm').ajaxSubmit({
-			async:false,
-			resetForm:false,
-			clearForm:false,
-			success: function(data){
-				var json = $.parseJSON(data);
-				if(json.errCode=='0000'){
-					result = true;
-				}
-			},
-			error: function(XMLHttpRequest, textStatus, errorThrown) {
-				$.alert({title:'系统出现异常！'});
-			}
-		 });
+			$.ajax({
+	 			type: "POST",
+	 			url: '${ufbDomain}/family/setting/findpwd_success.htm',
+	 			data:'password1='+$('#password1').val()+'&mobileno='+$("#mobileno").val(),
+	 			async:false,
+	 			success: function(data){
+	 				var json = $.parseJSON(data);
+	 				if(json.errCode=='0000'){
+	 					result = true;
+	 				}
+	 			},
+	 			error: function(XMLHttpRequest, textStatus, errorThrown) {
+	 				$.alert({title:'系统出现异常！'});
+	 			}
+	 		});
 		 return result;
 	}
 	$("#btn-subForm").on("click",function(){
 				 var password1=$("#password1").val();
-				 var text=check_pwd1(password1);
+				var text=check_pwd1(password1)
 				 if(password1==''){
 					 $("#errMsg_password1").addClass("error");
 					 $("#password1Tips").html("新登录密码不能为空！");
@@ -109,15 +118,11 @@ $(function(){
 					 $("#errMsg_password2").addClass("error");
 					 $("#password2Tips").html(text2);
 					return false;
-				}else if(isTradePwdSameUnLoign(password1, $("#mobileno").val())){
-					 $("#errMsg_password2").addClass("error");
-					 $("#password2Tips").html("登录密码与交易密码相同！");
-					return false;
 				}else{
 					 $("#errMsg_password2").removeClass("error");
 				}
 		  if(check_updatepwd()){
-			  location="${ufbDomain}/family/setting/findpassword_result.htm";
+			  location="${ufbDomain}/family/setting/findpwd_result.htm";
 		  }
 	})
 
