--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/cash_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/cash_index.vm
@@ -112,6 +112,7 @@
 <script type="text/javascript">
 	$(function(){
 		$('.nav a:eq(1)').addClass('active');
+		
 		// 点击银行卡
 		$(".card").on("click", function(){
 			$("#tradeacco").val($(this).attr("cardTradeacco"));
@@ -121,6 +122,13 @@
 			$("#cardRealAvailableDisplay").html(formatCurrency2($(this).attr("cardRealAvailable")));
 		});
 		
+		// 用户输入时，取消错误提示
+		$("form input").on('focus', function(){
+			if($(this).parent().hasClass('error')){
+				$(this).parent().removeClass('error');
+				//$(this).siblings('.tips-check').hide();
+			}
+		});
 		// 表单提交时，验证	
 		$("#submit").on("click", function(){
 			 //校验取现金额
