--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/pay_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/ufb/pay_index.vm
@@ -114,6 +114,14 @@ $(function(){
 		$("#tradeacco").val($(this).attr("tradeacco"));
 	});
 	
+	// 用户输入时，取消错误提示
+		$("form input").on('focus', function(){
+			if($(this).parent().hasClass('error')){
+				$(this).parent().removeClass('error');
+				//$(this).siblings('.tips-check').hide();
+			}
+		});
+	
 	// 表单提交时，验证	
 	$("#submit").on("click", function(){
 	 //校验充值金额
