--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/uft/uft_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/uft/uft_index.vm
@@ -132,7 +132,7 @@
 									#end
 							  </p></li>
                               <li class="sli2"><p class="sli2-p1">本月共<strong class="num-red">#if($!{plancount1}) $!{plancount1} #else 0 #end</strong>个缴费通知，总计（元）</p><p class="sli2-p2">  #if($!{planmonthamt1})$!{planmonthamt1} #else 0.00 #end</p></li>
-                              <li class="sli3"><p class="sli3-p1">退费（元）</p><p class="sli3-p2">#if($!{payackamount1})+$!{payackamount1} #else 0.00 #end</p></li>
+                              <li class="sli3"><p class="sli3-p1">退费（元）</p><p class="sli3-p2">#if($!{paydiscount1})+$!{paydiscount1} #else 0.00 #end</p></li>
                               <li class="sli4"><a href="${ufbDomain}/family/pay_notice.htm" class="btn btn-white">缴费</a></li>
                           </ul>
 					  </div>
@@ -158,7 +158,7 @@
                               <td class="num-green">$plan1.payappamount</td>
                               <td>$!{plan1.paydate}</td>
 							  <td>$!{plan1.plandate}</td>
-                              <td>#if($!{plan1.ispay}=='Y') 已缴费 #else 未缴费 #end</td>
+                              <td>#if($!{plan1.ispay}=='Y') 已缴费 #else 等待缴费 #end</td>
                           </tr>
 						  #end		  
                       </table>
@@ -175,7 +175,7 @@
 									#end
 								</p></li>
                               <li class="sli2"><p class="sli2-p1">本月共<strong class="num-red">#if($!{plancount2}) $!{plancount2} #else 0 #end</strong>个缴费通知，总计（元）</p><p class="sli2-p2">#if($planmonthamt2)$!{planmonthamt2} #else 0.00 #end</p></li>
-                              <li class="sli3"><p class="sli3-p1">退费（元）</p><p class="sli3-p2">#if($!{payackamount2})+$!{payackamount2} #else 0.00 #end</p></li>
+                              <li class="sli3"><p class="sli3-p1">退费（元）</p><p class="sli3-p2">#if($!{paydiscount2})+$!{paydiscount2} #else 0.00 #end</p></li>
                               <li class="sli4"><a href="" class="btn btn-white">缴费</a></li>
                           </ul>
 					  </div>
@@ -201,7 +201,7 @@
                               <td class="num-green">$plan2.payappamount</td>
                               <td>$!{plan2.paydate}</td>
 							  <td>$!{plan2.plandate}</td>
-                              <td>#if($!{plan2.ispay}=='Y') 已缴费 #else 未缴费 #end</td>
+                              <td>#if($!{plan2.ispay}=='Y') 已缴费 #else 等待缴费 #end</td>
                           </tr>
 						  #end
                       </table>
