--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/password_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/password_index.vm
@@ -388,6 +388,7 @@ $(function(){
 		$(".panel3 li").find(".tips-normal").attr("style","display:block");
 		$(".tradeBackStep1").attr("style","display:block;");
 		$(".tradeBackStep2").addClass("slide-out");
+		$(".btn-verifycode").trigger("click");
 		//clearTimeout(countdown);
 	})
 });
