--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/findpwd_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/findpwd_index.vm
@@ -67,7 +67,7 @@ $(function(){
 			$("#btn-getMsgCode").val("重新发送"); 
 			$("#btn-getMsgCode").removeClass("off");
 			$("#btn-getMsgCode").removeAttr("disabled"); 
-			clearTimeout(countdown); 
+			clearTimeout(countDown); 
 		}else{
 			count--; 
 			setTimeout(countDown, 1000);
