--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/password_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/password_index.vm
@@ -95,13 +95,18 @@ $(function(){
 				$("#btn-getMsgCode").val("重新发送"); 
 				$("#btn-getMsgCode").removeClass("off");
 				$("#btn-getMsgCode").removeAttr("disabled"); 
-				clearTimeout(countdown); 
+				clearTimeout(countDown); 
 			}else{
 				count--; 
 				setTimeout(countDown, 1000);
 			}
 		}
 
+	//
+	var clearDownTime=function(){
+		count=0;
+		clearTimeout(countDown);
+	}
 	// 校验手机验证码是否正确
 	function check_msgcode(mobileno,msgcode){
 		var result = false;
@@ -389,7 +394,7 @@ $(function(){
 		$(".tradeBackStep1").attr("style","display:block;");
 		$(".tradeBackStep2").addClass("slide-out");
 		$(".btn-verifycode").trigger("click");
-		//clearTimeout(countdown);
+		//clearDownTime();
 	})
 });
 
